Changed/enhanced the following: -updated jshint,and grunt-contrib-concat - resizing does not depend on margin of the  .window.Resizing currsor is triggered 5 px from the edges of the .window div. - support resize diagonaly and also working on FF and IE. - fixed windowy sticking to the mouse while fast window dragging and releasing mouse while moving fast (the mouseup event not caught outside the header (handle) ) - resizing adds scrollbars to the body content if the content has min-width, instead of the whole window

--- a/src/less/Window.less
+++ b/src/less/Window.less
@@ -67,9 +67,14 @@
 .window.ns-resize {
     cursor: ns-resize;
 }
-
 .window.ew-resize {
     cursor: ew-resize;
+}
+.window.nesw-resize     { 
+	cursor: nesw-resize; 
+}
+.window.nwse-resize     { 
+	cursor: nwse-resize; 
 }
 
 .window.active .window-header .window-title {
